--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,57 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@phdthesis{maierhofer2023statistical,
+  title={Statistical Reconstruction of 20th Century Antarctic Sea Ice},
+  author={Maierhofer, Thomas Johannes},
+  year={2023},
+  school={University of California, Los Angeles}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{summer2022interleukin,
+  title={An interleukin-1 polymorphism additionally intensified by atopy as prognostic factor for aseptic non-mechanical complications in metal knee and hip arthroplasty},
+  author={Summer, B and Lill, D and Remmel, K and Schraml, A and Schopf, C and Banke, IJ and Kuechenhoff, H and Maierhofer, T and Endres, S and Thomas, P},
+  journal={Frontiers in Immunology},
+  volume={13},
+  pages={1050315},
+  year={2022},
+  publisher={Frontiers}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@misc{lee2018,
+    author = {Boekels, Christian and Maierhofer, Thomas and Schroeter, Fabian},
+    title = {Method for Checking Plug Connections},
+    howpublished = {US Patent US20200083644A1, Bayerische Motoren Werke AG},
+    year = {2020}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{maierhofer2019cost,
+  title={Cost analysis as a tool for assessing the efficacy of intensive care units},
+  author={Maierhofer, Thomas and Pfisterer, Florian and Bender, Andreas and K{\"u}chenhoff, Helmut and M{\"o}rer, Onnen and Burchardi, Hilmar and Hartl, Wolfgang H},
+  journal={Wiener klinisches Magazin},
+  volume={22},
+  pages={86--93},
+  year={2019},
+  publisher={Springer}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@misc{maierhofer2018,
+    author = {Maierhofer, Thomas and Iseli, Markus and Savitsky, Eric},
+    title = {Functional Regression for Analyzing Human Ratings of Ultrasound Probe Alignment},
+    howpublished = {Poster presented at: CRESSTCON'18},
+    month = {10},
+    year = {2018},
+    note = "Los Angeles, CA"
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@misc{lee2018,
+    author = {Lee, Anna and Maierhofer, Thomas},
+    title = {Latent Ability Estimation in Serious Games
+Through Gameplay Data Visualization},
+    howpublished = {Poster presented at: CRESSTCON'18},
+    month = {10},
+    year = {2018},
+    note = "Los Angeles, CA"
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
+
