--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @phdthesis{maierhofer2023statistical,
+  selected={true},
   title={Statistical Reconstruction of 20th Century Antarctic Sea Ice},
   author={Maierhofer, Thomas Johannes},
   year={2023},
@@ -9,6 +10,7 @@
 }
 
 @article{summer2022interleukin,
+  selected={true},
   title={An interleukin-1 polymorphism additionally intensified by atopy as prognostic factor for aseptic non-mechanical complications in metal knee and hip arthroplasty},
   author={Summer, B and Lill, D and Remmel, K and Schraml, A and Schopf, C and Banke, IJ and Kuechenhoff, H and Maierhofer, T and Endres, S and Thomas, P},
   journal={Frontiers in Immunology},
@@ -18,7 +20,8 @@
   publisher={Frontiers}
 }
 
-@misc{lee2018,
+@misc{boekels2020,
+    selected={true},
     author = {Boekels, Christian and Maierhofer, Thomas and Schroeter, Fabian},
     title = {Method for Checking Plug Connections},
     howpublished = {US Patent US20200083644A1, Bayerische Motoren Werke AG},
