--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
   publisher={Frontiers}
 }
 
-@misc{boekels2020,
+@article{boekels2020,
     selected={true},
     author = {Boekels, Christian and Maierhofer, Thomas and Schroeter, Fabian},
     title = {Method for Checking Plug Connections},
@@ -38,7 +38,7 @@
   publisher={Springer}
 }
 
-@misc{maierhofer2018,
+@article{maierhofer2018,
     author = {Maierhofer, Thomas and Iseli, Markus and Savitsky, Eric},
     title = {Functional Regression for Analyzing Human Ratings of Ultrasound Probe Alignment},
     publisher = {Poster presented at: CRESSTCON'18},
@@ -47,7 +47,7 @@
     note = "Los Angeles, CA"
 }
 
-@misc{lee2018,
+@article{lee2018,
     author = {Lee, Anna and Maierhofer, Thomas},
     title = {Latent Ability Estimation in Serious Games
 Through Gameplay Data Visualization},
