--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
     selected={true},
     author = {Boekels, Christian and Maierhofer, Thomas and Schroeter, Fabian},
     title = {Method for Checking Plug Connections},
-    publisher = {US Patent US20200083644A1, Bayerische Motoren Werke AG},
+    journal = {US Patent US20200083644A1, Bayerische Motoren Werke AG},
     year = {2020}
 }
 
@@ -41,7 +41,7 @@
 @article{maierhofer2018,
     author = {Maierhofer, Thomas and Iseli, Markus and Savitsky, Eric},
     title = {Functional Regression for Analyzing Human Ratings of Ultrasound Probe Alignment},
-    publisher = {Poster presented at: CRESSTCON'18},
+    journal = {Poster presented at: CRESSTCON'18},
     month = {10},
     year = {2018},
     note = "Los Angeles, CA"
@@ -51,7 +51,7 @@
     author = {Lee, Anna and Maierhofer, Thomas},
     title = {Latent Ability Estimation in Serious Games
 Through Gameplay Data Visualization},
-    publisher = {Poster presented at: CRESSTCON'18},
+    journal = {Poster presented at: CRESSTCON'18},
     month = {10},
     year = {2018},
     note = "Los Angeles, CA"
