--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,25 @@
 ---
 ---
+@article{maierhofer2024bayesian,
+  title={A Bayesian model for 20th century Antarctic sea ice extent reconstruction},
+  author={Maierhofer, T\_J and Raphael, M\_N and Fogt, R\_L and Handcock, M\_S},
+  journal={Earth and Space Science},
+  volume={11},
+  number={10},
+  pages={e2024EA003577},
+  year={2024},
+  publisher={Wiley Online Library}
+}
+
+@misc{liu2023, 
+  selected={true},
+  author = {Percival Liu and Thomas Maierhofer}, 
+  title = {U0126 Significantly Impacts Survival of Bisected Planaria}, 
+  year = {2024}, 
+  address = {Poster presented at UCLA Undergraduate Research Week}, 
+  month = {04}, 
+  url = {http://www.astro.ex.ac.uk/exoclimes/2012/pdf/talks/Day02_Ferreira.pdf} 
+}
 
 @phdthesis{maierhofer2023statistical,
   selected={true},
