--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @article{maierhofer2024bayesian,
   title={A Bayesian model for 20th century Antarctic sea ice extent reconstruction},
-  author={Maierhofer, T\_J and Raphael, M\_N and Fogt, R\_L and Handcock, M\_S},
+  author={Thomas Maierhofer and Marilyn Raphael and Ryan Fogt and Mark Handcock},
   journal={Earth and Space Science},
   volume={11},
   number={10},
