--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,45 @@
+
+@misc{maierhofer2025data, 
+  selected={true},
+  author = {Isaiah Mireles and Thomas Maierhofer}, 
+  title = {From Textbooks to Chatbots: How a Custom AI Supports STATS 10 - Introduction to Statistical Reasoning}, 
+  year = {2025}, 
+  address = {Invited Talk at Instructional Design Showcase, UCLA}, 
+  month = {04}, 
+  day = {17},
+}
+
+@misc{maierhofer2025data, 
+  selected={true},
+  author = {Thomas Maierhofer}, 
+  title = {Data Visualization}, 
+  year = {2025}, 
+  address = {Invited Talk at UCLA Statistics Club}, 
+  month = {01}, 
+  day = {29},
+}
+
+
+@misc{mireles2024introducing, 
+  selected={true},
+  author = {Isaiah Mireles and Maxwell Chalekson and Thomas Maierhofer}, 
+  title = {Introducing ALISSTAIR - Artificial Language Intelligence System for Statistical Teaching Aid and Individualized Response}, 
+  year = {2024}, 
+  address = {Invited Talk at Statistics Seminar, Texas State University}, 
+  month = {10}, 
+  day = {18},
+}
+
+@misc{maierhofer2018pvalues, 
+  selected={true},
+  author = {Thomas Maierhofer}, 
+  title = {P-Values}, 
+  year = {2018}, 
+  address = {Lunch Talk, UCLA CRESST}, 
+  month = {05}, 
+  day = {15},
+}
+
 @article{maierhofer2024bayesian,
   title={A Bayesian model for 20th century Antarctic sea ice extent reconstruction},
   author={Thomas Maierhofer and Marilyn Raphael and Ryan Fogt and Mark Handcock},
@@ -15,8 +57,7 @@
   title = {U0126 Significantly Impacts Survival of Bisected Planaria}, 
   year = {2024}, 
   address = {Poster presented at UCLA Undergraduate Research Week}, 
-  month = {04}, 
-  url = {http://www.astro.ex.ac.uk/exoclimes/2012/pdf/talks/Day02_Ferreira.pdf} 
+  month = {04}
 }
 
 @phdthesis{maierhofer2023statistical,
