--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
   author = {Isaiah Mireles and Thomas Maierhofer}, 
   title = {From Textbooks to Chatbots: How a Custom AI Supports STATS 10 - Introduction to Statistical Reasoning}, 
   year = {2025}, 
-  address = {Invited Talk at Instructional Design Showcase, UCLA}, 
+  publisher = {Invited Talk at Instructional Design Showcase, UCLA}, 
   month = {04}, 
   day = {17},
 }
@@ -14,7 +14,7 @@
   author = {Thomas Maierhofer}, 
   title = {Data Visualization}, 
   year = {2025}, 
-  address = {Invited Talk at UCLA Statistics Club}, 
+  publisher = {Invited Talk at UCLA Statistics Club}, 
   month = {01}, 
   day = {29},
 }
@@ -25,7 +25,7 @@
   author = {Isaiah Mireles and Maxwell Chalekson and Thomas Maierhofer}, 
   title = {Introducing ALISSTAIR - Artificial Language Intelligence System for Statistical Teaching Aid and Individualized Response}, 
   year = {2024}, 
-  address = {Invited Talk at Statistics Seminar, Texas State University}, 
+  publisher = {Invited Talk at Statistics Seminar, Texas State University}, 
   month = {10}, 
   day = {18},
 }
@@ -35,7 +35,7 @@
   author = {Thomas Maierhofer}, 
   title = {P-Values}, 
   year = {2018}, 
-  address = {Lunch Talk, UCLA CRESST}, 
+  publisher = {Lunch Talk, UCLA CRESST}, 
   month = {05}, 
   day = {15},
 }
