--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,6 @@
   day = {29},
 }
 
-
 @misc{mireles2024introducing, 
   selected={true},
   author = {Isaiah Mireles and Maxwell Chalekson and Thomas Maierhofer}, 
@@ -56,14 +55,14 @@
   author = {Percival Liu and Thomas Maierhofer}, 
   title = {U0126 Significantly Impacts Survival of Bisected Planaria}, 
   year = {2024}, 
-  address = {Poster presented at UCLA Undergraduate Research Week}, 
+  publisher = {Poster presented at UCLA Undergraduate Research Week}, 
   month = {04}
 }
 
 @phdthesis{maierhofer2023statistical,
   selected={true},
   title={Statistical Reconstruction of 20th Century Antarctic Sea Ice},
-  author={Maierhofer, Thomas Johannes},
+  author={Thomas Maierhofer},
   year={2023},
   school={University of California, Los Angeles}
 }
