--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,10 @@
 
-@misc{maierhofer2025data, 
+@conference{maierhofer2025data, 
   selected={true},
   author = {Isaiah Mireles and Thomas Maierhofer}, 
   title = {From Textbooks to Chatbots: How a Custom AI Supports STATS 10 - Introduction to Statistical Reasoning}, 
   year = {2025}, 
-  howpublished = {Invited Talk at Instructional Design Showcase, UCLA}, 
+  booktitle = {Invited Talk at Instructional Design Showcase, UCLA}, 
   month = {04}, 
   day = {17},
 }
