--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,17 +6,17 @@
   year = {2025}, 
   booktitle = {Invited Talk at Instructional Design Showcase, UCLA}, 
   month = {04}, 
-  day = {17},
+  day = {17}
 }
 
-@misc{maierhofer2025data, 
+@inproceedings{maierhofer2025data, 
   selected={true},
   author = {Thomas Maierhofer}, 
   title = {Data Visualization}, 
   year = {2025}, 
-  howpublished = {Invited Talk at UCLA Statistics Club}, 
+  booktitle = {Invited Talk at UCLA Statistics Club}, 
   month = {01}, 
-  day = {29},
+  day = {29}
 }
 
 @misc{mireles2024introducing, 
@@ -26,7 +26,7 @@
   year = {2024}, 
   howpublished = {Invited Talk at Statistics Seminar, Texas State University}, 
   month = {10}, 
-  day = {18},
+  day = {18}
 }
 
 @misc{maierhofer2018pvalues, 
@@ -36,7 +36,7 @@
   year = {2018}, 
   howpublished = {Lunch Talk, UCLA CRESST}, 
   month = {05}, 
-  day = {15},
+  day = {15}
 }
 
 @article{maierhofer2024bayesian,
