--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,8 +5,7 @@
   title = {From Textbooks to Chatbots: How a Custom AI Supports STATS 10 - Introduction to Statistical Reasoning}, 
   year = {2025}, 
   booktitle = {Invited Talk at Instructional Design Showcase, UCLA}, 
-  month = {04}, 
-  day = {17}
+  month = {04}
 }
 
 @inproceedings{maierhofer2025data, 
@@ -15,8 +14,7 @@
   title = {Data Visualization}, 
   year = {2025}, 
   booktitle = {Invited Talk at UCLA Statistics Club}, 
-  month = {01}, 
-  day = {29}
+  month = {01}
 }
 
 @misc{mireles2024introducing, 
@@ -25,8 +23,7 @@
   title = {Introducing ALISSTAIR - Artificial Language Intelligence System for Statistical Teaching Aid and Individualized Response}, 
   year = {2024}, 
   howpublished = {Invited Talk at Statistics Seminar, Texas State University}, 
-  month = {10}, 
-  day = {18}
+  month = {10}
 }
 
 @misc{maierhofer2018pvalues, 
@@ -35,8 +32,7 @@
   title = {P-Values}, 
   year = {2018}, 
   howpublished = {Lunch Talk, UCLA CRESST}, 
-  month = {05}, 
-  day = {15}
+  month = {05}
 }
 
 @article{maierhofer2024bayesian,
@@ -55,7 +51,7 @@
   author = {Percival Liu and Thomas Maierhofer}, 
   title = {U0126 Significantly Impacts Survival of Bisected Planaria}, 
   year = {2024}, 
-  publisher = {Poster presented at UCLA Undergraduate Research Week}, 
+  howpublished = {Poster presented at UCLA Undergraduate Research Week}, 
   month = {04}
 }
 
