--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
   author = {Isaiah Mireles and Thomas Maierhofer}, 
   title = {From Textbooks to Chatbots: How a Custom AI Supports STATS 10 - Introduction to Statistical Reasoning}, 
   year = {2025}, 
-  booktitle = {Invited Talk at Instructional Design Showcase, UCLA}, 
+  note = {Invited Talk at Instructional Design Showcase, UCLA}, 
   month = {04}
 }
 
@@ -22,7 +22,7 @@
   author = {Isaiah Mireles and Maxwell Chalekson and Thomas Maierhofer}, 
   title = {Introducing ALISSTAIR - Artificial Language Intelligence System for Statistical Teaching Aid and Individualized Response}, 
   year = {2024}, 
-  howpublished = {Invited Talk at Statistics Seminar, Texas State University}, 
+  note = {Invited Talk at Statistics Seminar, Texas State University}, 
   month = {10}
 }
 
@@ -31,7 +31,7 @@
   author = {Thomas Maierhofer}, 
   title = {P-Values}, 
   year = {2018}, 
-  howpublished = {Lunch Talk, UCLA CRESST}, 
+  note = {Lunch Talk, UCLA CRESST}, 
   month = {05}
 }
 
