--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,12 +8,12 @@
   month = {04}
 }
 
-@inproceedings{maierhofer2025data, 
+@article{maierhofer2025data, 
   selected={true},
   author = {Thomas Maierhofer}, 
   title = {Data Visualization}, 
   year = {2025}, 
-  booktitle = {Invited Talk at UCLA Statistics Club}, 
+  journal = {Invited Talk at UCLA Statistics Club}, 
   month = {01}
 }
 
@@ -31,11 +31,12 @@
   author = {Thomas Maierhofer}, 
   title = {P-Values}, 
   year = {2018}, 
-  note = {Lunch Talk, UCLA CRESST}, 
+  annote = {Lunch Talk, UCLA CRESST}, 
   month = {05}
 }
 
 @article{maierhofer2024bayesian,
+  selected={true},
   title={A Bayesian model for 20th century Antarctic sea ice extent reconstruction},
   author={Thomas Maierhofer and Marilyn Raphael and Ryan Fogt and Mark Handcock},
   journal={Earth and Space Science},
