--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,5 @@
 
-@conference{maierhofer2025data, 
+@misc{maierhofer2025data, 
   selected={true},
   author = {Isaiah Mireles and Thomas Maierhofer}, 
   title = {From Textbooks to Chatbots: How a Custom AI Supports STATS 10 - Introduction to Statistical Reasoning}, 
@@ -8,12 +8,12 @@
   month = {04}
 }
 
-@article{maierhofer2025data, 
+@misc{maierhofer2025data, 
   selected={true},
   author = {Thomas Maierhofer}, 
   title = {Data Visualization}, 
   year = {2025}, 
-  journal = {Invited Talk at UCLA Statistics Club}, 
+  note = {Invited Talk at UCLA Statistics Club}, 
   month = {01}
 }
 
@@ -31,7 +31,7 @@
   author = {Thomas Maierhofer}, 
   title = {P-Values}, 
   year = {2018}, 
-  annote = {Lunch Talk, UCLA CRESST}, 
+  note = {Lunch Talk, UCLA CRESST}, 
   month = {05}
 }
 
@@ -52,7 +52,7 @@
   author = {Percival Liu and Thomas Maierhofer}, 
   title = {U0126 Significantly Impacts Survival of Bisected Planaria}, 
   year = {2024}, 
-  howpublished = {Poster presented at UCLA Undergraduate Research Week}, 
+  note = {Poster presented at UCLA Undergraduate Research Week}, 
   month = {04}
 }
 
