--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
 }
 
 @misc{maierhofer2025data, 
-  selected={true},
+  selected={false},
   author = {Thomas Maierhofer}, 
   title = {Data Visualization}, 
   year = {2025}, 
@@ -27,7 +27,7 @@
 }
 
 @misc{maierhofer2018pvalues, 
-  selected={true},
+  selected={false},
   author = {Thomas Maierhofer}, 
   title = {P-Values}, 
   year = {2018}, 
@@ -48,7 +48,7 @@
 }
 
 @misc{liu2023, 
-  selected={true},
+  selected={false},
   author = {Percival Liu and Thomas Maierhofer}, 
   title = {U0126 Significantly Impacts Survival of Bisected Planaria}, 
   year = {2024}, 
@@ -65,7 +65,7 @@
 }
 
 @article{summer2022interleukin,
-  selected={true},
+  selected={false},
   title={An interleukin-1 polymorphism additionally intensified by atopy as prognostic factor for aseptic non-mechanical complications in metal knee and hip arthroplasty},
   author={Summer, B and Lill, D and Remmel, K and Schraml, A and Schopf, C and Banke, IJ and Kuechenhoff, H and Maierhofer, T and Endres, S and Thomas, P},
   journal={Frontiers in Immunology},
@@ -76,7 +76,7 @@
 }
 
 @article{boekels2020,
-    selected={true},
+    selected={false},
     author = {Boekels, Christian and Maierhofer, Thomas and Schroeter, Fabian},
     title = {Method for Checking Plug Connections},
     journal = {US Patent US20200083644A1, Bayerische Motoren Werke AG},
@@ -84,6 +84,7 @@
 }
 
 @article{maierhofer2019cost,
+  selected={true},
   title={Cost analysis as a tool for assessing the efficacy of intensive care units},
   author={Maierhofer, Thomas and Pfisterer, Florian and Bender, Andreas and K{\"u}chenhoff, Helmut and M{\"o}rer, Onnen and Burchardi, Hilmar and Hartl, Wolfgang H},
   journal={Wiener klinisches Magazin},
@@ -94,6 +95,7 @@
 }
 
 @article{maierhofer2018,
+    selected={false},
     author = {Maierhofer, Thomas and Iseli, Markus and Savitsky, Eric},
     title = {Functional Regression for Analyzing Human Ratings of Ultrasound Probe Alignment},
     journal = {Poster presented at: CRESSTCON'18},
@@ -103,6 +105,7 @@
 }
 
 @article{lee2018,
+    selected={false},
     author = {Lee, Anna and Maierhofer, Thomas},
     title = {Latent Ability Estimation in Serious Games
 Through Gameplay Data Visualization},
