--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,15 @@
+@article{maierhofer2024bayesian,
+  selected={true},
+  title={A Twenty-First Century Structural Change in Antarctica's Sea Ice System},
+  author={Marilyn Raphael and Ryan Fogt and Will Hobbs and Thomas Maierhofer and Mark Handcock},
+  journal={Nature - Communications Earth & Environment},
+  volume={6},
+  pages={131},
+  year={2025},
+  publisher={Wiley Online Library}
+}
+Raphael, M.N., Maierhofer, T.J., Fogt, R.L., Hobbs, W.R., & Handcock, M.S. (2025). 
+: Data and Code Repository. In  (1.0, Vol. 6, p. 131)
 
 @misc{maierhofer2025data, 
   selected={true},
